Fix: Ensure text remains visible during webfont load

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
   src: url("../public/Space_Grotesk/SpaceGrotesk-VariableFont_wght.ttf");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
